force-app/main/default/objects/Energy_Use_Data_Log__c/Energy_Use_Data_Log__c.object-meta.xml
<CustomObject>
    <description>HT: Created for NZC Implementation UC003_US05, created to store the energy use data logs.</description>
    <label>Energy Use Data Log</label>
    <nameField>
        <displayFormat>Log-{00000}</displayFormat>
        <label>Energy Use Data Log</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Energy Use Data Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>