force-app/main/default/objects/Energy_Use_Data_Log__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <type>TextArea</type>
</CustomField>