force-app/main/default/objects/Energy_Use_Data_Log__c/fields/Archival_Criteria_Check__c.field-meta.xml
<CustomField>
    <fullName>Archival_Criteria_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>AK: Created this field to mark fields for archival on completion of 180 days</description>
    <label>Archival Criteria Check</label>
    <type>Checkbox</type>
</CustomField>