force-app/main/default/objects/Energy_Use_Data_Log__c/fields/Business_Region__c.field-meta.xml
<CustomField>
    <fullName>Business_Region__c</fullName>
    <description>SB: Created for NZC Implementation
Purpose: for multi approver change request this field has been created to populate business region from its parent site information record</description>
    <formula>TEXT(Site_Information__r.BusinessRegion)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Region</label>
    <type>Text</type>
</CustomField>