force-app/main/default/objects/Energy_Use_Data_Log__c/fields/Consumption_Unit__c.field-meta.xml
<CustomField>
    <fullName>Consumption_Unit__c</fullName>
    <label>Consumption Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>m3</fullName>
            </value>
            <value>
                <fullName>ccf</fullName>
            </value>
            <value>
                <fullName>kWh</fullName>
            </value>
            <value>
                <fullName>mWh</fullName>
            </value>
            <value>
                <fullName>Liters</fullName>
            </value>
            <value>
                <fullName>USGallons</fullName>
                <label>US Gallons</label>
            </value>
            <value>
                <fullName>kg</fullName>
            </value>
            <value>
                <fullName>lbs</fullName>
            </value>
            <value>
                <fullName>MJ</fullName>
            </value>
            <value>
                <fullName>custom_ft3</fullName>
                <label>ft3 (CUSTOM)</label>
            </value>
            <value>
                <fullName>custom_kBtu</fullName>
                <label>kBtu (CUSTOM)</label>
            </value>
            <value>
                <fullName>custom_mcf</fullName>
                <label>mcf (CUSTOM)</label>
            </value>
            <value>
                <fullName>custom_kg</fullName>
                <label>kg (CUSTOM)</label>
            </value>
            <value>
                <fullName>custom_lbs</fullName>
                <label>lbs (CUSTOM)</label>
            </value>
            <value>
                <fullName>UKGallons</fullName>
                <label>UK Gallons</label>
            </value>
            <value>
                <fullName>kcal</fullName>
            </value>
            <value>
                <fullName>Therms</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>