force-app/main/default/objects/Energy_Use_Data_Log__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>SB: Created for NZC Implementation
Purpose: for multi approver change request this field has been created to populate country from its parent site information record</description>
    <formula>TEXT(Site_Information__r.Country)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country</label>
    <type>Text</type>
</CustomField>