force-app/main/default/objects/Energy_Use_Data_Log__c/fields/Data_Approver__c.field-meta.xml
<CustomField>
    <fullName>Data_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SB: Created for NZC Implementation
Purpose: Data approver user lookup field created for approval process</description>
    <label>Data Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Energy_Use_Data_Logs1</relationshipName>
    <type>Lookup</type>
</CustomField>