force-app/main/default/objects/Energy_Use_Data_Log__c/fields/Data_Validator__c.field-meta.xml
<CustomField>
    <fullName>Data_Validator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SB: Created for NZC Implementation
Purpose: Data validator user lookup field created for approval process</description>
    <label>Data Validator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Energy_Use_Data_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>