force-app/main/default/objects/Energy_Use_Data_Log__c/fields/Eligible_for_Archival__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_Archival__c</fullName>
    <formula>IF(NOW() &gt;= ADDMONTHS(CreatedDate,12*7), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Eligible for Archival</label>
    <type>Checkbox</type>
</CustomField>