force-app/main/default/objects/Energy_Use_Data_Log__c/fields/Fuel_Consumption__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Consumption__c</fullName>
    <label>Fuel Consumption</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>