force-app/main/default/objects/Energy_Use_Data_Log__c/fields/Fuel_Type__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Type__c</fullName>
    <label>Fuel Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>