force-app/main/default/objects/Energy_Use_Data_Log__c/fields/Fuel_Value__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Value__c</fullName>
    <label>Fuel Value</label>
    <length>50</length>
    <type>Text</type>
</CustomField>