force-app/main/default/objects/Energy_Use_Data_Log__c/fields/NZC_Month_Selected__c.field-meta.xml
<CustomField>
    <fullName>NZC_Month_Selected__c</fullName>
    <label>Month Selected</label>
    <length>30</length>
    <type>Text</type>
</CustomField>