force-app/main/default/objects/Energy_Use_Data_Log__c/fields/NZC_Owner__c.field-meta.xml
<CustomField>
    <fullName>NZC_Owner__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;&amp; OwnerId, Owner:User.FirstName + &apos; &apos; + Owner:User.LastName , &apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner</label>
    <type>Text</type>
</CustomField>