force-app/main/default/objects/Energy_Use_Data_Log__c/fields/Option_Selected__c.field-meta.xml
<CustomField>
    <fullName>Option_Selected__c</fullName>
    <label>Option Selected</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Applicable</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>To be Confirmed</fullName>
            </value>
            <value>
                <fullName>To be Estimated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>