force-app/main/default/objects/Energy_Use_Data_Log__c/fields/Site_Information__c.field-meta.xml
<CustomField>
    <fullName>Site_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site Information</label>
    <referenceTo>StnryAssetEnvrSrc</referenceTo>
    <relationshipLabel>Energy_Use_Data_Logs</relationshipLabel>
    <relationshipName>Energy_Use_Data_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>