force-app/main/default/objects/Energy_Use_Data_Log__c/fields/Stationary_Asset_Energy_Use__c.field-meta.xml
<CustomField>
    <fullName>Stationary_Asset_Energy_Use__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stationary Asset Energy Use</label>
    <referenceTo>StnryAssetEnrgyUse</referenceTo>
    <relationshipLabel>Energy_Use_Data_Logs</relationshipLabel>
    <relationshipName>Energy_Use_Data_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>