force-app/main/default/objects/Energy_Use_Data_Log__c/fields/User_Time__c.field-meta.xml
<CustomField>
    <fullName>User_Time__c</fullName>
    <label>User Time</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>