force-app/main/default/objects/Energy_Use_Data_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Site_Information__c</columns>
    <columns>Stationary_Asset_Energy_Use__c</columns>
    <columns>Fuel_Type__c</columns>
    <columns>Option_Selected__c</columns>
    <columns>NZC_Month_Selected__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>