force-app/main/default/objects/Energy_Use_Data_Log__c/listViews/AMER_Data_Approver_Energy_Use_Data_Log.listView-meta.xml
<ListView>
    <fullName>AMER_Data_Approver_Energy_Use_Data_Log</fullName>
    <filterScope>Queue</filterScope>
    <label>AMER Data Approver</label>
    <queue>AMER_Data_Approver</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>