force-app/main/default/objects/Energy_Use_Data_Log__c/listViews/APAC_Phillipines_Data_Approver_Energy_Use_Data_Log.listView-meta.xml
<ListView>
    <fullName>APAC_Phillipines_Data_Approver_Energy_Use_Data_Log</fullName>
    <filterScope>Queue</filterScope>
    <label>APAC Phillipines Data Approver</label>
    <queue>APAC_Phillipines_Data_Approver</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>