force-app/main/default/objects/Energy_Use_Data_Log__c/listViews/INDIA_APAC_EMEA_Data_Approver_Energy_Use_Data_Log.listView-meta.xml
<ListView>
    <fullName>INDIA_APAC_EMEA_Data_Approver_Energy_Use_Data_Log</fullName>
    <filterScope>Queue</filterScope>
    <label>INDIA, APAC, EMEA Data Approver</label>
    <queue>INDIA_APAC_EMEA_Data_Approver</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>