force-app/main/default/objects/Energy_Use_Data_Log__c/listViews/LATAM_Data_Approver_Energy_Use_Data_Log.listView-meta.xml
<ListView>
    <fullName>LATAM_Data_Approver_Energy_Use_Data_Log</fullName>
    <filterScope>Queue</filterScope>
    <label>LATAM Data Approver</label>
    <queue>LATAM_Data_Approver</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>